--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     color: red;
     
 }
-section{
+.flexible{
     display: flex;
     margin-bottom: 100px;
 
@@ -20,6 +20,7 @@ section{
 .partition img{
     width: 80%;
 }
+
 .button{
     background-image: linear-gradient(orange , tomato);
     text-decoration: none;
@@ -37,4 +38,37 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.shadow{
+    box-shadow: 10px 10px 40px grey;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+    
+}
+.paragraph-font{
+    font-size: 16px;
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position:left;
+}
+#web-dev{
+    border-left: 7px solid;
+    border-image:linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+#web-dev1{
+    border-left: 7px solid;
+    border-image:linear-gradient(red,cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
